correct branch name for pr

--- a/.github/workflows/delete-deploy-pr.yml
+++ b/.github/workflows/delete-deploy-pr.yml
@@ -1,7 +1,7 @@
 name: Delete Pull Request Deployment
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     types: [ closed ]
     paths-ignore:
       - '.github/workflows/**'
