--- a/.github/workflows/deploy-gh-pg-pr.yml
+++ b/.github/workflows/deploy-gh-pg-pr.yml
@@ -1,7 +1,7 @@
 name: Pull Request Github Pages Build and Deploy
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths-ignore:
       - '.github/workflows/**'
       # - '**.md'
