--- a/.github/workflows/deploy-gh-pg-pr.yml
+++ b/.github/workflows/deploy-gh-pg-pr.yml
@@ -23,10 +23,11 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy preview
-        uses: rossjrw/pr-preview-action@v1
+      - name: Deploy PR Preview
+        uses: rossjrw/pr-preview-action@v1.1.1
+
         with:
-          source-dir: ./build/
+          preview-branch: main
 
 
 # name: Pull Request Github Pages Build and Deploy
