--- a/.github/workflows/deploy-gh-pg-pr.yml
+++ b/.github/workflows/deploy-gh-pg-pr.yml
@@ -17,11 +17,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build
+      # - name: Install and Build
+      #   run: |
+      #     npm install
+      #     npm run build
 
       - name: Deploy PR Preview
         uses: rossjrw/pr-preview-action@v1.1.1
