Updated pr workflow

--- a/.github/workflows/deploy-gh-pg-pr.yml
+++ b/.github/workflows/deploy-gh-pg-pr.yml
@@ -8,6 +8,10 @@ on:
       - reopened
       - synchronize
       - closed
+    path:
+      - 'docs/**'
+      - '**.md'
+      - '**.html'
 
 concurrency: preview-${{ github.ref }}
 
