--- a/.github/workflows/deploy-gh-pg-pr.yml
+++ b/.github/workflows/deploy-gh-pg-pr.yml
@@ -8,7 +8,7 @@ on:
       - reopened
       - synchronize
       - closed
-    path:
+    paths:
       - 'docs/**'
       - '**.md'
       - '**.html'
